# clapfig

./: .gitignore  .release-sync-state.yaml  .shipit.toml  CHANGELOG.md  Cargo.toml  FIXME.md  README.md  lefthook.yml  pixi.toml
.github/workflows/: checks.yml  ci.yml  release.yml  shipit-release.yml
CHANGELOG/: legacy.md  unreleased-flatten-test-coverage.md  unreleased-migrate-changelog.md  unreleased-revert-rc-pollution.md
clapfig-derive/: Cargo.toml
clapfig-derive/src/: lib.rs
crates/clapfig/: Cargo.toml
crates/clapfig-derive/: Cargo.toml
crates/clapfig/src/: builder.rs  cli.rs  fixtures.rs  lib.rs  normalize.rs  resolve.rs  resolver.rs  runtime.rs  runtime_builder.rs  runtime_spec.rs  schema_builder.rs  spec.rs  types.rs  url.rs  validate.rs
crates/clapfig/tests/: derive_schema.rs
docs/: config-command.md  getting-started.md  layered-config.md  resolver.md  runtime-schemas.md  strictness.md
docs/proposals/: runtime-schemas-and-cascading-strictness.md  schema-metadata-symmetry.md
examples/clapfig_demo/: config.rs  main.rs
scripts/: check  ci-publish-crate.sh  pre-commit
src/: builder.rs  cli.rs  env.rs  error.rs  file.rs  fixtures.rs  flatten.rs  lib.rs  merge.rs  meta.rs  normalize.rs  ops.rs  overrides.rs  persist.rs  render.rs  resolve.rs  resolver.rs  runtime.rs  runtime_builder.rs  runtime_spec.rs  schema.rs  schema_builder.rs  spec.rs  static_schema.rs  strict.rs  types.rs  validate.rs
tests/: derive_schema.rs  derive_schema_depth.rs  ui_derive_schema.rs
tests/ui/derive/: allowed_empty_rejected.rs  allowed_on_vec_rejected.rs  (+17 more)
(+16 files in other folders)
